PROD-675 - Fix only email setting checkbox spacing

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_settings.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_settings.scss
@@ -209,7 +209,7 @@
 	}
 
 	.email:last-child {
-		min-width: 18px;
+		min-width: 48px;
 
 		label {
 			font-size: 0 !important;
